// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`opening match checkpoints > matches the seeded command, event, visibility, and checkpoint baseline > seed 17 1`] = `
{
  "commands": [
    null,
    {
      "participantId": "scenario-player-one",
      "replaceInstanceIds": [
        "scenario-player-one:deck:17",
      ],
      "type": "confirm-mulligan",
    },
    {
      "participantId": "scenario-player-two",
      "replaceInstanceIds": [
        "scenario-player-two:deck:21",
      ],
      "type": "confirm-mulligan",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-two",
      "type": "dev-set-mana",
    },
    {
      "cardInstanceId": "missing",
      "participantId": "scenario-player-two",
      "type": "play-card",
    },
    {
      "participantId": "scenario-player-two",
      "target": {
        "kind": "hero",
        "participantId": "scenario-player-one",
      },
      "type": "use-hero-power",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-two",
      "type": "dev-set-mana",
    },
    {
      "cardId": "goblins_vs_gnomes_blingtron_3000",
      "participantId": "scenario-player-two",
      "type": "dev-add-card",
    },
    {
      "cardInstanceId": "scenario-player-two:dev:65",
      "participantId": "scenario-player-two",
      "position": 0,
      "type": "play-card",
    },
    {
      "cardId": "naxxramas_haunted_creeper",
      "participantId": "scenario-player-one",
      "type": "dev-summon-minion",
    },
    {
      "cardId": "naxxramas_nerubian_egg",
      "participantId": "scenario-player-one",
      "type": "dev-summon-minion",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-two",
      "type": "dev-set-mana",
    },
    {
      "cardId": "basic_flamestrike",
      "participantId": "scenario-player-two",
      "type": "dev-add-card",
    },
    {
      "cardInstanceId": "scenario-player-two:dev:75",
      "participantId": "scenario-player-two",
      "type": "play-card",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-two",
      "type": "dev-set-mana",
    },
    {
      "cardId": "basic_polymorph",
      "participantId": "scenario-player-two",
      "type": "dev-add-card",
    },
    {
      "cardInstanceId": "scenario-player-two:dev:87",
      "participantId": "scenario-player-two",
      "targets": [
        {
          "instanceId": "scenario-player-one:summoned:84",
          "kind": "minion",
          "participantId": "scenario-player-one",
        },
      ],
      "type": "play-card",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-two",
      "type": "dev-set-mana",
    },
    {
      "cardId": "basic_mind_control",
      "participantId": "scenario-player-two",
      "type": "dev-add-card",
    },
    {
      "cardInstanceId": "scenario-player-two:dev:88",
      "participantId": "scenario-player-two",
      "targets": [
        {
          "instanceId": "scenario-player-one:summoned:84",
          "kind": "minion",
          "participantId": "scenario-player-one",
        },
      ],
      "type": "play-card",
    },
    {
      "cardId": "basic_raid_leader",
      "participantId": "scenario-player-two",
      "type": "dev-summon-minion",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-two",
      "type": "dev-set-mana",
    },
    {
      "cardId": "classic_ice_barrier",
      "participantId": "scenario-player-two",
      "type": "dev-add-card",
    },
    {
      "cardInstanceId": "scenario-player-two:dev:90",
      "participantId": "scenario-player-two",
      "type": "play-card",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-two",
      "type": "dev-set-mana",
    },
    {
      "cardId": "league_of_explorers_raven_idol",
      "participantId": "scenario-player-two",
      "type": "dev-add-card",
    },
    {
      "cardInstanceId": "scenario-player-two:dev:92",
      "choice": 0,
      "participantId": "scenario-player-two",
      "type": "play-card",
    },
    {
      "cardInstanceId": "scenario-player-two:discover:93",
      "participantId": "scenario-player-two",
      "type": "choose-discover-card",
    },
    {
      "participantId": "scenario-player-two",
      "type": "end-turn",
    },
    {
      "participantId": "scenario-player-one",
      "type": "end-turn",
    },
    {
      "attacker": {
        "instanceId": "scenario-player-two:dev:65",
        "kind": "minion",
      },
      "defender": {
        "kind": "hero",
      },
      "participantId": "scenario-player-two",
      "type": "attack-character",
    },
    {
      "participantId": "scenario-player-two",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-two",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-two",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-two",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-two",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-two",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-two",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-two",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-two",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-two",
      "type": "dev-draw",
    },
    {
      "action": "destroy",
      "participantId": "scenario-player-two",
      "type": "dev-modify-deck",
    },
    {
      "participantId": "scenario-player-two",
      "type": "dev-draw",
    },
    {
      "action": "refill",
      "participantId": "scenario-player-two",
      "type": "dev-modify-deck",
    },
  ],
  "digests": {
    "checkpoints": "824c8942facfe1ac431b9d160af802d85b2822fef313d3acca2350e2faf5f394",
    "commands": "27b804fe2b22d674637c2dbd70f541ddf2c71dbbe634aea3e12427dc0af3cbf7",
    "legality": "61135493b6bd1c50604562cbef0efa97adca8095e747ee7dc5c8f7786a6f0a4f",
    "publicEvents": "dbcbcc68568ab623fae78db6ac7fd288b7bf53c9b7c9e30336a9518b97757851",
    "publicState": "3a2c8b1efcf440b4c2c5c76ff81c13da3b3f5a927682b31744e37be0afe49026",
    "results": "7e7603c3fab52aca2c63a43c2b5799d3daf560af48365e835d612897868adca9",
    "trace": "b7ba7cd87df2139919b98c0a5aaa635d1bd7e52fca9afc4e8c5e1feb2e846fb9",
  },
}
`;

exports[`opening match checkpoints > matches the seeded command, event, visibility, and checkpoint baseline > seed 314159 1`] = `
{
  "commands": [
    null,
    {
      "participantId": "scenario-player-one",
      "replaceInstanceIds": [
        "scenario-player-one:deck:22",
      ],
      "type": "confirm-mulligan",
    },
    {
      "participantId": "scenario-player-two",
      "replaceInstanceIds": [
        "scenario-player-two:deck:22",
      ],
      "type": "confirm-mulligan",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-one",
      "type": "dev-set-mana",
    },
    {
      "cardInstanceId": "missing",
      "participantId": "scenario-player-one",
      "type": "play-card",
    },
    {
      "participantId": "scenario-player-one",
      "target": {
        "kind": "hero",
        "participantId": "scenario-player-two",
      },
      "type": "use-hero-power",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-one",
      "type": "dev-set-mana",
    },
    {
      "cardId": "goblins_vs_gnomes_blingtron_3000",
      "participantId": "scenario-player-one",
      "type": "dev-add-card",
    },
    {
      "cardInstanceId": "scenario-player-one:dev:65",
      "participantId": "scenario-player-one",
      "position": 0,
      "type": "play-card",
    },
    {
      "cardId": "naxxramas_haunted_creeper",
      "participantId": "scenario-player-two",
      "type": "dev-summon-minion",
    },
    {
      "cardId": "naxxramas_nerubian_egg",
      "participantId": "scenario-player-two",
      "type": "dev-summon-minion",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-one",
      "type": "dev-set-mana",
    },
    {
      "cardId": "basic_flamestrike",
      "participantId": "scenario-player-one",
      "type": "dev-add-card",
    },
    {
      "cardInstanceId": "scenario-player-one:dev:75",
      "participantId": "scenario-player-one",
      "type": "play-card",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-one",
      "type": "dev-set-mana",
    },
    {
      "cardId": "basic_polymorph",
      "participantId": "scenario-player-one",
      "type": "dev-add-card",
    },
    {
      "cardInstanceId": "scenario-player-one:dev:87",
      "participantId": "scenario-player-one",
      "targets": [
        {
          "instanceId": "scenario-player-two:summoned:84",
          "kind": "minion",
          "participantId": "scenario-player-two",
        },
      ],
      "type": "play-card",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-one",
      "type": "dev-set-mana",
    },
    {
      "cardId": "basic_mind_control",
      "participantId": "scenario-player-one",
      "type": "dev-add-card",
    },
    {
      "cardInstanceId": "scenario-player-one:dev:88",
      "participantId": "scenario-player-one",
      "targets": [
        {
          "instanceId": "scenario-player-two:summoned:84",
          "kind": "minion",
          "participantId": "scenario-player-two",
        },
      ],
      "type": "play-card",
    },
    {
      "cardId": "basic_raid_leader",
      "participantId": "scenario-player-one",
      "type": "dev-summon-minion",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-one",
      "type": "dev-set-mana",
    },
    {
      "cardId": "classic_ice_barrier",
      "participantId": "scenario-player-one",
      "type": "dev-add-card",
    },
    {
      "cardInstanceId": "scenario-player-one:dev:90",
      "participantId": "scenario-player-one",
      "type": "play-card",
    },
    {
      "available": 10,
      "maximum": 10,
      "participantId": "scenario-player-one",
      "type": "dev-set-mana",
    },
    {
      "cardId": "league_of_explorers_raven_idol",
      "participantId": "scenario-player-one",
      "type": "dev-add-card",
    },
    {
      "cardInstanceId": "scenario-player-one:dev:92",
      "choice": 0,
      "participantId": "scenario-player-one",
      "type": "play-card",
    },
    {
      "cardInstanceId": "scenario-player-one:discover:93",
      "participantId": "scenario-player-one",
      "type": "choose-discover-card",
    },
    {
      "participantId": "scenario-player-one",
      "type": "end-turn",
    },
    {
      "participantId": "scenario-player-two",
      "type": "end-turn",
    },
    {
      "attacker": {
        "instanceId": "scenario-player-one:dev:65",
        "kind": "minion",
      },
      "defender": {
        "kind": "hero",
      },
      "participantId": "scenario-player-one",
      "type": "attack-character",
    },
    {
      "participantId": "scenario-player-one",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-one",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-one",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-one",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-one",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-one",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-one",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-one",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-one",
      "type": "dev-draw",
    },
    {
      "participantId": "scenario-player-one",
      "type": "dev-draw",
    },
    {
      "action": "destroy",
      "participantId": "scenario-player-one",
      "type": "dev-modify-deck",
    },
    {
      "participantId": "scenario-player-one",
      "type": "dev-draw",
    },
    {
      "action": "refill",
      "participantId": "scenario-player-one",
      "type": "dev-modify-deck",
    },
  ],
  "digests": {
    "checkpoints": "6652fda1c57798ed89f35e223b14a7bdcd1303ed069ad30c496da55503de0e93",
    "commands": "1df3500ff667fe5e400400a3846fef06b20472bb50e02d546cdda1d90574a273",
    "legality": "1c72db1e9f70d9744a25e76c03596655c5cdea213c4fb80a5c3d42b1db454d91",
    "publicEvents": "089d5bdad913070e27e43a866c4695909b8e0d3ec34e2c1f30fa0a6529c68526",
    "publicState": "ceaf9472cfd14eb8204ef647e1a13715ad6834330b83a930643df919a1bddc7b",
    "results": "31103c6eb079aacc5e37c0c9ee994d28effd709a33fdddee7a24add13360e066",
    "trace": "5ab8377d67f7b6790dd00676e57479e2fc4209b4970e09a8cd651f4da43277c3",
  },
}
`;
